--- a/kong.conf
+++ b/kong.conf
@@ -3,8 +3,8 @@ proxy_listen = 0.0.0.0:8000, 0.0.0.0:8443 ssl
 admin_listen = 0.0.0.0:8001, 0.0.0.0:8444 ssl
 
 # enabled plugins
-plugins = bundled, 
-
+plugins = bundled, idlvalidator
+custom_plugins = idlvalidator
 # database config
 database = postgres
 pg_database = kong
